deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  namespace: static-site
spec:
  replicas: 4
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      containers:
      - name: static-site
        image: prakhar1989/static-site
