service.yml
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: static-site
spec:
  selector:
    app: static-site
  type: LoadBalancer
  ports:
    - name: static-site-80
      port: 80
      protocol: TCP
      targetPort: 80
    - name: static-site-443
      port: 443
      protocol: TCP
      targetPort: 443
