ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: static-site-route
  namespace: static-site
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`static-site.meech.io`)
    kind: Rule
    services:
    - name: static-site
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: static-site-route
  namespace: static-site
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`static-site.meech.io`)
    kind: Rule
    services:
    - name: static-site
      port: 80
  tls:
    certResolver: default
